syntax = "proto3";

option java_package = "com.bracketcove.graphsudoku";
option java_multiple_files = true;

message GameSettings {
  int32 boundary = 9;
  ProtoDifficulty difficulty = 2;

  enum ProtoDifficulty {
    UNKNOWN = 0;
    EASY = 1;
    MEDIUM = 2;
    HARD = 3;
  }
}